# Blume

./: .gitignore  .gitmodules  Blume.pro  CMakeLists.txt  blume.qrc  deploy_linux.sh  deploy_macos.sh  deploy_windows.sh  mahoufarm.qrc
.github/workflows/: build_ios.yml  builds_desktop.yml  builds_mobile.yml  flatpak.yml  ios-ipa.yml  ios.yml  main.yml
assets/: COPYING  assets.qrc
assets/android/: AndroidManifest.xml  build.gradle  gradle.properties  local.properties
assets/android/res/xml/: provider_paths.xml
assets/android/src/com/mahoutech/blume/: GalleryImagePicker.java  GalleryPicker.java  ImagePicker.java  WatchFlowerAndroidNotifier.java  WatchFlowerAndroidService.java  WatchFlowerBootServiceBroadcastReceiver.java
assets/android/src/com/mahoutech/utils/: QSharePathResolver.java  QShareUtils.java
assets/ios/: Info.plist  blume.entitlements
assets/macos/: Info.plist
assets/windows/: setup.nsi
docs/: code_guide.md  jqjcy01ym-ble-api.md  lywsd03mmc-ble-api.md
i18n/: blume_en.qm  blume_en.ts  blume_fr.qm  blume_fr.ts  i18n.qrc
qml/: About.qml  Constants.qml  DesktopApplication.qml  DesktopHeader.qml  DeviceBrowser.qml  DeviceEnvironmental.qml  DeviceList.qml  DeviceListSplit.qml  DeviceListUnified.qml  DeviceNearbyWidget.qml  DevicePlantSensor.qml  DevicePlantSensorCare.qml  DevicePlantSensorData.qml  DevicePlantSensorHistory.qml  DevicePlantSensorSettings.qml  DeviceThermometer.qml  DeviceWidget.qml  FAQ.qml  JournalWidget.qml  Loadere.qml  MobileApplication.qml  MobileDrawer.qml  MobileHeader.qml  MobileMenu.qml  MobilePermissions.qml  NavigationPage.qml  NotAuthenticated.qml  PlantBrowseCategory.qml  PlantBrowser.qml  PlantBrowserOld.qml  PlantCareInfos.qml  PlantCareJournal.qml  PlantCareLimits.qml  PlantDesease.qml  PlantDeseaseDetails.qml  PlantIdentifier.qml  PlantIdentifierDetails.qml  PlantScreen.qml  PlantScreenDetails.qml  PosometreDialog.qml  (+7 more)
qml/components/: Accordion.qml  ActionMenuFixed.qml  ActionMenuFixedDevices.qml  AirQualityIndicator.qml  AndroidPermRequester.qml  AppBar.qml  AppBarButton.qml  BottomTabBar.qml  BottomTabDevices.qml  ButtonExperimental.qml  ChartEnvironmentalVoc.qml  ChartHistory.qml  ChartPlantDataAio.qml  ChartThermometerMinMax.qml  ChartThermometerMinMaxBar.qml  DrawerItem.qml  FormGroup.qml  FullScreenPopup.qml  GardenActivityLine.qml  GardenPlantLine.qml  GardenPlantLineImage.qml  GardenPlantLineWide.qml  GardenSpaceLine.qml  Http.qml  ImagePickerArea.qml  IndicatorsCompact.qml  IndicatorsSolid.qml  ItemBannerSync.qml  ItemEnvBox.qml  ItemLoadData.qml  ItemMenuLine.qml  ItemNoBluetooth.qml  ItemNoData.qml  ItemNoDevice.qml  ItemNoDeviceNearby.qml  ItemNoImage.qml  ItemNoJournal.qml  ItemNoPermission.qml  ItemNoPlant.qml  ItemNoPlants.qml  (+11 more)
qml/components_generic/: Alert.qml  AndroidButton.qml  AndroidButtonIcon.qml  Avatar.qml  BPage.qml  ButtonCompactable.qml  ButtonWireframe.qml  ButtonWireframeIcon.qml  ButtonWireframeIconCentered.qml  Carousel.qml  DataBarCompact.qml  DataBarSolid.qml  DatePicker6.qml  IconSvg.qml  RangeSliderValue.qml  RangeSliderValueSolid.qml  RoundButtonIcon.qml  RoundButtonText.qml  SliderValueSolid.qml  qmldir
qml/components_js/: Colors.qml  Http.js  Signaler.qml  Utils.js  UtilsNumber.js  average_brighness.frag  qmldir
qml/components_themed/: ButtonIconThemed.qml  RoundButtonIconThemed.qml  SpinBoxThemed.qml  TumblerThemed.qml  qmldir
qml/models/: AlarmModel.qml  DeviceModel.qml  Model.qml  ModelManager.qml  PlantModel.qml  SpaceModel.qml  qmldir
qml/pages/: AskHelp.qml  DescriptionScreen.qml  Faq.qml  Feed.qml  Posometre.qml  TutorialNew.qml  qmldir
qml/pages/Auth/: Login.qml  Register.qml  SignIn.qml  SignUp.qml  qmldir
qml/pages/Device/: DeviceScanPage.qml  qmldir
qml/pages/Garden/: AlarmsCalendar.qml  BlogScreen.qml  GardenEditSpace.qml  GardenPlantsList.qml  GardenScreen.qml  GardenSpaceDetails.qml  GardenSpaceLinePreview.qml  GardenSpacesList.qml  qmldir
qml/pages/Insect/: InsectDetailsScreen.qml  InsectIdentifier.qml  InsectIdentifierResultsList.qml  qmldir
qml/pages/Plant/: DetailsLineScreen.qml  DiseasIdentifierResultsScreen.qml  Plant.qml  PlantBrowser.qml  PlantDesease.qml  PlantDeseaseDetails.qml  PlantDeseaseEncylopedie.qml  PlantFlowerchecker.qml  PlantFrequencies.qml  PlantIdentifier.qml  PlantIdentifierDetails.qml  PlantIdentifierResultsScreen.qml  PlantScreen.qml  PlantSearch.qml  PlantShortDescriptions.qml  qmldir
qml/pages/Social/: App.qml  qmldir
qml/pages/Social/components/: ActionMenuItem.qml  Avatar.qml  BOutlineTextField.qml  ButtonImage.qml  ButtonImageWithText.qml  InputField.qml  NativeTextArea.qml  NiceButton.qml  RadiusImage.qml  TextArea.qml  ToolBarButton.qml  qmldir
qml/pages/Social/pages/: CloseMyAccountPage.qml  ContactPickerPage.qml  FeedDetailsPage.qml  FeedPage.qml  FindUser.qml  ListBlockedUsers.qml  Login.qml  MessageList.qml  MessagePage.qml  PostEditPage.qml  ProfileEditPage.qml  Register.qml  SocialPreview.qml  StartPage.qml  UserProfile.qml  qmldir
qml/pages/Social/utils/: Http.qml  Services.qml  qmldir
qml/pages/Social/widgets/: ActionMenuUserAccount.qml  FullScreenMedia.qml  PostActions.qml  qmldir
qml/popups/: PopupBackgroundUpdates.qml  PopupBlacklistDevice.qml  PopupCalibration.qml  PopupDate.qml  PopupDeleteData.qml  PopupDeleteDevice.qml  PopupLocationNotification.qml  PopupMacAddress.qml  PopupRequestIosPerms.qml  qmldir
qml/services/: qmldir
scripts/: icongenerator.cmake
src/: DatabaseManager.cpp  NotificationManager.cpp  SettingsManager.cpp  SettingsManager.h  SystrayManager.cpp  SystrayManager.h  image2base64.cpp  image2base64.h  imagepicker.h  imagepicker.mm  main.cpp  posometrecamera.cpp  posometrecamera.h
src/android_tools/: QAndroidAppPermissions.cpp  QAndroidAppPermissions.h  QtAndroidTools.cpp  QtAndroidTools.h
src/database/: sqlplugin.cpp  sqlplugin.h
src/devices/: device_jqjcy01ym.h
